# ecvt

./: .gitignore  README.md  build.sh  clean.sh  main.py  meson.build  original.py  run.sh  syspwm.py
src/: main.cpp
